tests/paczka1/small_fuzzy/22956368.err
Error in line 1: aLl8J1 A965 67,5
Error in line 8: A965 A965 45,7
Error in line 12: A965 A556 65,2
Error in line 2: k8ZQV6 A965 34,2
Error in line 13: A965 A371 39,6
